--- a/django/.env.template
+++ b/django/.env.template
@@ -2,3 +2,9 @@ DJANGO_DEBUG={{django_debug}}
 DJANGO_SECRET_KEY={{django_secret_key}}
 DJANGO_ALLOWED_HOSTS={{django_allowed_hosts}}
 DJANGO_TRUSTED_ORIGINS={{django_trusted_origins}}
+
+DATABASE_NAME={{database_name}}
+DATABASE_USER={{database_user}}
+DATABASE_PASSWORD={{database_password}}
+DATABASE_HOST={{database_host}}
+DATABASE_PORT={{database_port}}
